<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_frag_bg"
    tools:context=".ui.onBoardingProcess.faceScanStartFragment.FaceScanStartFragment">

    <View
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_65sdp"
        android:background="@color/light_blue"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="@dimen/_7sdp"
        android:layout_height="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintBottom_toBottomOf="@id/tv_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_back" />

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/josefinsanssemibold"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"

        app:layout_constraintStart_toEndOf="@id/back_arrow"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_create_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/josefinsanssemibold"
        android:text="@string/create_an_acc"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_top_steps"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/light_blue"
        app:layout_constraintTop_toBottomOf="@id/view_header" />

    <ImageView
        android:id="@+id/iv_user_avatar"
        android:layout_width="@dimen/_12sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/ic_user_avatar"
        app:layout_constraintEnd_toEndOf="@id/tv_add_info"
        app:layout_constraintStart_toStartOf="@id/tv_add_info"
        app:layout_constraintTop_toTopOf="@id/view_top_steps" />

    <TextView
        android:id="@+id/tv_add_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/josefinsansbold"
        android:text="@string/add_info"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintEnd_toStartOf="@id/tv_scan_face"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user_avatar" />

    <ImageView
        android:id="@+id/iv_icon_face"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/ic_face_login"
        app:layout_constraintEnd_toEndOf="@id/tv_scan_face"
        app:layout_constraintStart_toStartOf="@id/tv_scan_face"
        app:layout_constraintTop_toTopOf="@id/view_top_steps" />

    <TextView
        android:id="@+id/tv_scan_face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/josefinsansbold"
        android:text="@string/scan_face"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_icon_face" />

    <ImageView
        android:id="@+id/iv_icon_finger"
        android:layout_width="@dimen/_13sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/ic_finger_print_login"
        app:layout_constraintEnd_toEndOf="@id/tv_scan_finger"
        app:layout_constraintStart_toStartOf="@id/tv_scan_finger"
        app:layout_constraintTop_toTopOf="@id/view_top_steps" />

    <TextView
        android:id="@+id/tv_scan_finger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/josefinsansbold"
        android:text="@string/scan_fingerprint"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_scan_face"
        app:layout_constraintTop_toBottomOf="@id/iv_icon_finger" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="#40FFFFFF"
        app:layout_constraintBottom_toBottomOf="@id/view_top_steps" />

    <View
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_2sdp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@id/view_top_steps"
        app:layout_constraintEnd_toEndOf="@id/tv_scan_face"
        app:layout_constraintStart_toStartOf="@id/tv_scan_face" />

    <ImageView
        android:id="@+id/iv_artwork"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_180sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/artwork_face_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_top_steps" />

    <TextView
        android:id="@+id/tv_heading_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefinsanssemibold"
        android:lineSpacingExtra="@dimen/_10sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:text="@string/face_scan_instruction_heading"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_artwork" />

    <ImageView
        android:id="@+id/iv_cross_1"
        android:layout_width="@dimen/_13sdp"
        android:layout_height="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_heading_instructions"
        app:tint="@color/red" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_hat"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/iv_cross_1"
        app:layout_constraintTop_toTopOf="@id/iv_cross_1"
        app:layout_constraintBottom_toBottomOf="@id/iv_cross_1"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_13ssp"
        android:textAllCaps="true"
        android:fontFamily="@font/josefinsanssemibold"/>

    <ImageView
        android:id="@+id/iv_cross_2"
        android:layout_width="@dimen/_13sdp"
        android:layout_height="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_cross_1"
        app:tint="@color/red" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_sunglasses"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/iv_cross_2"
        app:layout_constraintTop_toTopOf="@id/iv_cross_2"
        app:layout_constraintBottom_toBottomOf="@id/iv_cross_2"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_13ssp"
        android:textAllCaps="true"
        android:fontFamily="@font/josefinsanssemibold"/>

    <ImageView
        android:id="@+id/iv_tick_1"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/ic_tick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_cross_2"
        app:tint="@color/light_green" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_has_bright_ligth"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/iv_tick_1"
        app:layout_constraintTop_toTopOf="@id/iv_tick_1"
        app:layout_constraintBottom_toBottomOf="@id/iv_tick_1"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_13ssp"
        android:textAllCaps="true"
        android:fontFamily="@font/josefinsanssemibold"/>

    <ImageView
        android:id="@+id/iv_tick_2"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/ic_tick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_tick_1"
        app:tint="@color/light_green" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/face_the_camera"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/iv_tick_2"
        app:layout_constraintTop_toTopOf="@id/iv_tick_2"
        app:layout_constraintBottom_toBottomOf="@id/iv_tick_2"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_13ssp"
        android:textAllCaps="true"
        android:fontFamily="@font/josefinsanssemibold"/>

    <include
        android:layout_height="@dimen/_80sdp"
        android:layout_width="@dimen/_160sdp"
        android:id="@+id/included_btn"
        app:layout_constraintStart_toStartOf="parent"
        layout="@layout/yellow_continue_btn"
        app:layout_constraintTop_toBottomOf="@id/iv_tick_2"
        app:layout_constraintEnd_toStartOf="@id/skip_btn"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:id="@+id/skip_btn"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toEndOf="@id/included_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/iv_tick_2"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/josefinsanssemibold"
        android:background="@drawable/stroke_rounded"/>




</androidx.constraintlayout.widget.ConstraintLayout>